# xfce4-embed-plugin

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  configure.ac.in
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  embed-dialogs.c  embed-dialogs.h  embed.c  embed.desktop.in  embed.desktop.in.in  embed.h  ewmh.c  ewmh.h
po/: LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ko.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  (+8 more)
